Fixed some loc issues.

--- a/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
+++ b/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
@@ -88,7 +88,7 @@ Localization
 		#autoLOC_KPlanes_Start_012_IntercontinentalDistance_completedMessage = So the other continents look much like this one, but are warmer or colder. Not sure flying so far is good for Kerbals.
 
 		// ================================================================================
-		#autoLOC_KPlanes_Early_001_StratosphereLow_title = Fly an airplane to @/PrettyAltMax.
+		#autoLOC_KPlanes_Early_001_StratosphereLow_title = Fly an airplane to @/PrettyAltMin.
 		#autoLOC_KPlanes_Early_001_StratosphereLow_description = Inigma Kerman wants you to design and fly an aircraft capable of operating at an @/PrettyAltRange. He says that such an accomplishment will make future air travel safer since most of the serious weather only happens below this altitude. He says that if pilots could simply fly over bad weather rather than through it, it would unlock a large number of regional and possibly global air travel possibilities.
 		#autoLOC_KPlanes_Early_001_StratosphereLow_synopsis = Simply launch an airplane from the runway, fly up to an @/PrettyAltRange, then land back at KSC safely.
 		#autoLOC_KPlanes_Early_001_StratosphereLow_notes = Enjoy the view, as at this altitude the clouds (if any are seen today) will mostly be below your aircraft!
@@ -96,17 +96,17 @@ Localization
 
 		// --------------------------------------------------------------------------------
 		#autoLOC_KPlanes_Early_002_Mach1_title = Achieve an airspeed of @/PrettySpeed.
-		#autoLOC_KPlanes_Early_002_Mach1_description = Our aerospace chief scientist Mach Kerman, and KSP retired test pilot Yeager Kerman, want to push us toward developing a spaceplane. But before this can happen, Inigma Kerman says they need to master supersonic flight, and to do this, he is asking your organization to design a plane that can break through the sound barrier in level flight @/PrettyAltRange.\n\nAlthough not required to complete this challenge, Mach Kerman believes that if you design an airplane to use one of the new liquid fueled rocket engines being developed for use by the space program, might make this attempt easier to accomplish.
+		#autoLOC_KPlanes_Early_002_Mach1_description = Our aerospace chief scientist Mach Kerman, and KSP retired test pilot Yeager Kerman, want to push us toward developing a spaceplane. But before this can happen, Inigma Kerman says they need to master supersonic flight, and to do this, he is asking your organization to design a plane that can break through the sound barrier in level flight at an @/PrettyAltRange.\n\nAlthough not required to complete this challenge, Mach Kerman believes that if you design an airplane to use one of the new liquid fueled rocket engines being developed for use by the space program, might make this attempt easier to accomplish.
 		#autoLOC_KPlanes_Early_002_Mach1_synopsis = Launch an airplane from the runway, fly with an @/PrettyAltRange, exceed @/PrettySpeed in level flight for 5 seconds, and then land back at KSC safely.
 		#autoLOC_KPlanes_Early_002_Mach1_notes = No one has ever gone faster than the speed of sound before, so most scientists and engineers are at a loss as to give you any useful advice. Even if they could, they're afraid you'd be traveling to fast to hear it anyways.
 		#autoLOC_KPlanes_Early_002_Mach1_completedMessage = You have broken the sound barrier and achieved the amazing speed of Mach 1! Don't worry, we're sure it can be fixed back up in a jiffy for the next guy!
 
 		// --------------------------------------------------------------------------------
-		#autoLOC_KPlanes_Early_003_StratosphereHigh_title = Fly an airplane to @/PrettyAltMax.
-		#autoLOC_KPlanes_Early_003_StratosphereHigh_description = Maculator Kerman has another challenge for you, this time one that could very well unlock opportunities for regular global air travel - achieve a flying @/PrettyAltRange. He says accomplishing such a flying altitude will prove that even the highest mountains can be flown over, which would unlock nearly any destination by air!
+		#autoLOC_KPlanes_Early_003_StratosphereHigh_title = Fly an airplane to @/PrettyAltMin.
+		#autoLOC_KPlanes_Early_003_StratosphereHigh_description = Maculator Kerman has another challenge for you, this time one that could very well unlock opportunities for regular global air travel - achieve a flying at an @/PrettyAltRange. He says accomplishing such a flying altitude will prove that even the highest mountains can be flown over, which would unlock nearly any destination by air!
 		#autoLOC_KPlanes_Early_003_StratosphereHigh_synopsis = Simply launch an airplane from the runway, fly at an @/PrettyAltRange, then land back at KSC safely.
 		#autoLOC_KPlanes_Early_003_StratosphereHigh_notes = Enjoy the view, as at this altitude the curvature of the planet will be clearly visible!
-		#autoLOC_KPlanes_Early_003_StratosphereHigh_completedMessage = You did it! An @/PrettyAltRange\n\nA number of opportunities have opened up now that global air travel is just on the horizon of possibility. Check back in with Mission Control for a new contract opportunities!
+		#autoLOC_KPlanes_Early_003_StratosphereHigh_completedMessage = You did it! @/PrettyAltMin!\n\nA number of opportunities have opened up now that global air travel is just on the horizon of possibility. Check back in with Mission Control for a new contract opportunities!
 
 		// --------------------------------------------------------------------------------
 		#autoLOC_KPlanes_Early_004_Mach2_title = Achieve an airspeed of @/PrettySpeed.
@@ -116,7 +116,7 @@ Localization
 		#autoLOC_KPlanes_Early_004_Mach2_completedMessage = Wow! You did it! You reached Mach 2, and came back safely!\n\nInigma passed your flight data to Gene Kerman at the Kerbal Space Program, and Gene says he's very proud of your accomplishments, and that he's very glad to have you working together.
 
 		// --------------------------------------------------------------------------------
-		#autoLOC_KPlanes_Early_007_MesosphereLow_title = Fly an airplane to @/PrettyAltMax.
+		#autoLOC_KPlanes_Early_007_MesosphereLow_title = Fly an airplane to @/PrettyAltMin.
 		#autoLOC_KPlanes_Early_007_MesosphereLow_description = The Kerbal Space Program have selected your organization to receive special funding to design and fly an aircraft that will reach the upper atmospheric height of @/PrettyAltRange. Inigma Kerman explains that accomplishing this feat will open up the exciting frontier of spaceplane development!
 		#autoLOC_KPlanes_Early_007_MesosphereLow_synopsis = Simply launch an airplane from the runway, fly at an @/PrettyAltRange, then land back at KSC safely.
 		#autoLOC_KPlanes_Early_007_MesosphereLow_notes = Enjoy the view, as at this altitude you will feel as if you are touching the very boundary of space!
@@ -130,11 +130,11 @@ Localization
 		#autoLOC_KPlanes_Early_008_Mach3_completedMessage = Incredible! You have achieved Mach 3!\n\nInigma Kerman says this flight brings the spaceplane program one crucial step toward reality, and also comes with some significant funds from the Kerbal Space Program who will benefit from your flight data.
 
 		// --------------------------------------------------------------------------------
-		#autoLOC_KPlanes_Early_011_MesosphereHigh_title = Fly an airplane to @/PrettyAltMax.
+		#autoLOC_KPlanes_Early_011_MesosphereHigh_title = Fly an airplane to @/PrettyAltMin.
 		#autoLOC_KPlanes_Early_011_MesosphereHigh_description = The Kerbal Space Program wants us to be the first to develop a spaceplane for use in its space program. Inigma Kerman already had you on speed dial, and is currently asking your organization to lead this cutting edge effort.\n\nInigma says that you will need to develop a spaceplane - one that will be able to fly to the highest reaches of the atmosphere, and land on the ground safely. It's not that hard to say that an @/PrettyAltRange is a mere skip away from space. He says the Kerbal Space Program has already given authorization to make this a suborbital flight if desired - assuming you can engineer your spaceplane to do so, but it's not required to complete the mission.
 		#autoLOC_KPlanes_Early_011_MesosphereHigh_synopsis = Simply launch a spaceplane from the runway and fly to an @/PrettyAltRange and then land your spaceplane anywhere on the ground safely. You may use an air-breathing engine, or liquid fueled engine, or both.
 		#autoLOC_KPlanes_Early_011_MesosphereHigh_notes = High above the ground, where space meets the air, and the stars beckon, will you realize that the universe is at your fingertips. That is, if Kerbals even have fingers other than their thumbs.
-		#autoLOC_KPlanes_Early_011_MesosphereHigh_completedMessage = Your spaceplane mission was a success! Mission Control erupted in celebration when you flew at @/PrettyAltMax, and again when you landed. There are compliments all around, and your organization has been honored with a fairly large reward.
+		#autoLOC_KPlanes_Early_011_MesosphereHigh_completedMessage = Your spaceplane mission was a success! Mission Control erupted in celebration when you flew at @/PrettyAltMin, and again when you landed. There are compliments all around, and your organization has been honored with a fairly large reward.
 
 		// --------------------------------------------------------------------------------
 		#autoLOC_KPlanes_Early_012_Mach4_title = Achieve an airspeed of @/PrettySpeed.
