Fix Early altitude contract names and heights.

--- a/GameData/ContractPacks/KPlanes/Groups/Early/007-MesosphereLow.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Early/007-MesosphereLow.cfg
@@ -35,7 +35,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = double
-		AltMin = Round(@KPlanes:StratosphereHigh * 1000.0)
+		AltMin = Round(@KPlanes:MesosphereLow * 1000.0)
 		ScaledAltMin = Round(@/AltMin / 1000.0)
 		title = Minimum altitude
 	}
@@ -43,7 +43,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		DescAltMin = " (Stratosphere High)"
+		DescAltMin = " (Mesosphere Low)"
 		title = Minimum altitude
 	}
 
