--- a/GameData/ContractPacks/KPlanes/Groups/Early/011-MesosphereHigh.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Early/011-MesosphereHigh.cfg
@@ -37,7 +37,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = double
-		AltMin = Round(@KPlanes:MesosphereLow * 1000.0)
+		AltMin = Round(@KPlanes:MesosphereHigh * 1000.0)
 		ScaledAltMin = Round(@/AltMin / 1000.0)
 		title = Minimum altitude
 	}
@@ -45,7 +45,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		DescAltMin = " (Mesosphere Low)"
+		DescAltMin = " (Mesosphere High)"
 		title = Minimum altitude
 	}
 
@@ -58,30 +58,8 @@ CONTRACT_TYPE
 
 	DATA
 	{
-		type = double
-		AltMax = Round(@KPlanes:StratosphereHigh * 1000.0)
-		ScaledAltMax = Round(@/AltMax / 1000.0)
-		title = Maximum altitude
-	}
-
-	DATA
-	{
 		type = string
-		DescAltMax = " (Stratosphere High)"
-		title = Maximum altitude
-	}
-
-	DATA
-	{
-		type = string
-		PrettyAltMax = @/ScaledAltMax.ToString("#,# km")
-		title = Maximum altitude
-	}
-
-	DATA
-	{
-		type = string
-		PrettyAltRange = altitude between @/PrettyAltMin@/DescAltMin and @/PrettyAltMax@/DescAltMax
+		PrettyAltRange = altitude of at least @/PrettyAltMin@/DescAltMin
 		title = Range for altitude 
 	}
 
@@ -219,7 +197,6 @@ CONTRACT_TYPE
 			targetBody = HomeWorld()
 			situation = FLYING
 			minAltitude = @/AltMin
-			maxAltitude = @/AltMax
 
 			disableOnStateChange = true
 			hideChildren = true
