--- a/GameData/ContractPacks/KPlanes/Groups/Early/012-Mach4.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Early/012-Mach4.cfg
@@ -59,7 +59,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = double
-		AltMax = Round(@KPlanes:MesosphereLow * 1000.0)
+		AltMax = Round(@KPlanes:MesosphereHigh * 1000.0)
 		ScaledAltMax = Round(@/AltMax / 1000.0)
 		title = Maximum altitude
 	}
@@ -67,7 +67,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		DescAltMax = " (Mesosphere Low)"
+		DescAltMax = " (Mesosphere High)"
 		title = Maximum altitude
 	}
 
