--- a/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
+++ b/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
@@ -88,7 +88,7 @@ Localization
 		#autoLOC_KPlanes_Start_012_IntercontinentalDistance_completedMessage = So the other continents look much like this one, but are warmer or colder. Not sure flying so far is good for Kerbals.
 
 		// ================================================================================
-		#autoLOC_KPlanes_Early_001_StratosphereLow_title = Fly an airplane to @/PrettyAltMin.
+		#autoLOC_KPlanes_Early_001_StratosphereLow_title = Fly an airplane to @/PrettyAltMin@/DescAltMin.
 		#autoLOC_KPlanes_Early_001_StratosphereLow_description = Inigma Kerman wants you to design and fly an aircraft capable of operating at an @/PrettyAltRange. He says that such an accomplishment will make future air travel safer since most of the serious weather only happens below this altitude. He says that if pilots could simply fly over bad weather rather than through it, it would unlock a large number of regional and possibly global air travel possibilities.
 		#autoLOC_KPlanes_Early_001_StratosphereLow_synopsis = Simply launch an airplane from the runway, fly up to an @/PrettyAltRange, then land back at KSC safely.
 		#autoLOC_KPlanes_Early_001_StratosphereLow_notes = Enjoy the view, as at this altitude the clouds (if any are seen today) will mostly be below your aircraft!
@@ -102,7 +102,7 @@ Localization
 		#autoLOC_KPlanes_Early_002_Mach1_completedMessage = You have broken the sound barrier and achieved the amazing speed of Mach 1! Don't worry, we're sure it can be fixed back up in a jiffy for the next guy!
 
 		// --------------------------------------------------------------------------------
-		#autoLOC_KPlanes_Early_003_StratosphereHigh_title = Fly an airplane to @/PrettyAltMin.
+		#autoLOC_KPlanes_Early_003_StratosphereHigh_title = Fly an airplane to @/PrettyAltMin@/DescAltMin.
 		#autoLOC_KPlanes_Early_003_StratosphereHigh_description = Maculator Kerman has another challenge for you, this time one that could very well unlock opportunities for regular global air travel - achieve a flying at an @/PrettyAltRange. He says accomplishing such a flying altitude will prove that even the highest mountains can be flown over, which would unlock nearly any destination by air!
 		#autoLOC_KPlanes_Early_003_StratosphereHigh_synopsis = Simply launch an airplane from the runway, fly at an @/PrettyAltRange, then land back at KSC safely.
 		#autoLOC_KPlanes_Early_003_StratosphereHigh_notes = Enjoy the view, as at this altitude the curvature of the planet will be clearly visible!
@@ -116,7 +116,7 @@ Localization
 		#autoLOC_KPlanes_Early_004_Mach2_completedMessage = Wow! You did it! You reached Mach 2, and came back safely!\n\nInigma passed your flight data to Gene Kerman at the Kerbal Space Program, and Gene says he's very proud of your accomplishments, and that he's very glad to have you working together.
 
 		// --------------------------------------------------------------------------------
-		#autoLOC_KPlanes_Early_007_MesosphereLow_title = Fly an airplane to @/PrettyAltMin.
+		#autoLOC_KPlanes_Early_007_MesosphereLow_title = Fly an airplane to @/PrettyAltMin@/DescAltMin.
 		#autoLOC_KPlanes_Early_007_MesosphereLow_description = The Kerbal Space Program have selected your organization to receive special funding to design and fly an aircraft that will reach the upper atmospheric height of @/PrettyAltRange. Inigma Kerman explains that accomplishing this feat will open up the exciting frontier of spaceplane development!
 		#autoLOC_KPlanes_Early_007_MesosphereLow_synopsis = Simply launch an airplane from the runway, fly at an @/PrettyAltRange, then land back at KSC safely.
 		#autoLOC_KPlanes_Early_007_MesosphereLow_notes = Enjoy the view, as at this altitude you will feel as if you are touching the very boundary of space!
