Added polar, circum-polar, equatorial distance, missing jet contract.

--- a/GameData/ContractPacks/KPlanes/Groups/Early/010-AroundTheWorld.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Early/010-AroundTheWorld.cfg
@@ -6,7 +6,7 @@
 CONTRACT_TYPE
 {
 
-	sortKey = a008
+	sortKey = a010
 
 //REQUIREMENTS FOR CONTRACT TO APPEAR
 
@@ -15,7 +15,7 @@ CONTRACT_TYPE
 		name = CompleteContract
 		type = CompleteContract
 
-		contractType = Start-006-ShortHop
+		contractType = Early-006-ToTheNorthPole
 		minCount = 1
 
 	}
@@ -28,14 +28,14 @@ CONTRACT_TYPE
 	{
 		type = string
 
-		craft = KPlanesCraft_Start_008
+		craft = KPlanesCraft_Early_010
 
 	}
 
 	DATA
 	{
 		type = double
-		AltMax = Round(@KPlanes:StratosphereLow * 1000.0)
+		AltMax = Round(@KPlanes:StratosphereHigh * 1000.0)
 		ScaledAltMax = Round(@/AltMax / 1000.0)
 		title = Maximum altitude
 	}
@@ -43,7 +43,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		DescAltMax = " (Stratosphere Low)"
+		DescAltMax = " (Stratosphere High)"
 		title = Maximum altitude
 	}
 
@@ -64,7 +64,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = double
-		Distance = Round(@KPlanes:Domestic * 1000.0)
+		Distance = Round(@KPlanes:CircumEquator * 1000.0)
 		ScaledDistance = Round(@/Distance / 1000.0)
 		title = Distance
 	}
@@ -72,7 +72,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		DescDistance = " (Domestic)"
+		DescDistance = " (Circum Equator)"
 		title = Distance
 	}
 
@@ -90,42 +90,20 @@ CONTRACT_TYPE
 		title = Range for distance 
 	}
 
-	DATA
-	{
-		type = double
-		MarkerDistance = Round(@KPlanes:Domestic * 1000.0) / 2.0
-		ScaledMarkerDistance = Round(@/MarkerDistance / 1000.0)
-		title = Distance
-	}
-
-	DATA
-	{
-		type = string
-		DescMarkerDistance = ""
-		title = Distance
-	}
-
-	DATA
-	{
-		type = string
-		PrettyMarkerDistance = @/ScaledMarkerDistance.ToString("#,# km")
-		title = Distance
-	}
-
 //CONTRACT DESCRIPTION
 
-	name = Start-008-DomesticDistance
-	title = #autoLOC_KPlanes_Start_008_DomesticDistance_title
-	group = KPlanes_Start
-	agent = Wright Aeronautical
+	name = Early-010-AroundTheWorld
+	title = #autoLOC_KPlanes_Early_010_AroundTheWorld_title
+	group = KPlanes_Early
+	agent = KACA
 
-	description = #autoLOC_KPlanes_Start_008_DomesticDistance_description
+	description = #autoLOC_KPlanes_Early_010_AroundTheWorld_description
 
-	synopsis = #autoLOC_KPlanes_Start_008_DomesticDistance_synopsis
+	synopsis = #autoLOC_KPlanes_Early_010_AroundTheWorld_synopsis
 
-	notes = #autoLOC_KPlanes_Start_008_DomesticDistance_notes
+	notes = #autoLOC_KPlanes_Early_010_AroundTheWorld_notes
 
-	completedMessage = #autoLOC_KPlanes_Start_008_DomesticDistance_completedMessage
+	completedMessage = #autoLOC_KPlanes_Early_010_AroundTheWorld_completedMessage
 
 //Contract Limits
 	maxCompletions = 1
@@ -141,18 +119,18 @@ CONTRACT_TYPE
 	deadline = 0
 
 //Contract Reward Modifiers
-	prestige = Trivial
+	prestige = Significant
 	targetBody = HomeWorld()
 
 //Contract Rewards
-	advanceFunds = 10 * @KPlanes:RewardAdvanceFunds
-	rewardFunds = 10 * @KPlanes:RewardFunds
-	rewardReputation = 5 * @KPlanes:RewardReputation
-	rewardScience = 3 * @KPlanes:RewardScience
+	advanceFunds = 80 * @KPlanes:RewardAdvanceFunds
+	rewardFunds = 80 * @KPlanes:RewardFunds
+	rewardReputation = 30 * @KPlanes:RewardReputation
+	rewardScience = 5 * @KPlanes:RewardScience
 
 //Contract Penalties
-	failureFunds = 10 * @KPlanes:FailureFunds
-	failureReputation = 5 * @KPlanes:FailureReputation
+	failureFunds = 80 * @KPlanes:FailureFunds
+	failureReputation = 30 * @KPlanes:FailureReputation
 
 
 //PARAMETERS FOR CONTRACT COMPLETION
@@ -281,19 +259,7 @@ CONTRACT_TYPE
 
 	}
 
-//Contract Behaviour (Distance Marker)
-	DATA
-	{
-		type = double
-		Marker1Lat = 0.0
-		Marker1Lon = KSC().Location().Longitude() >= 90.0 ? KSC().Location().Longitude() - 90.0 : KSC().Location().Longitude() + 90.0
-		Marker2Lat = 0.0
-		Marker2Lon = KSC().Location().Longitude() >= 0.0 ? KSC().Location().Longitude() - 180.0 : KSC().Location().Longitude() + 180.0
-		Marker3Lat = 0.0
-		Marker3Lon = KSC().Location().Longitude() <= 90.0 ? KSC().Location().Longitude() + 90.0 : KSC().Location().Longitude() - 90.0
-		title = Marker Locations
-	}
-
+//Contract Behaviour (Waypoints)
 BEHAVIOUR
 {
     name = WaypointGenerator
@@ -309,19 +275,40 @@ BEHAVIOUR
         pqsCity = KSC
     }
 
-    RANDOM_WAYPOINT_NEAR
-    {
-        name = Distance Marker
+	WAYPOINT
+	{
+		name = Marker 1
 
-        targetBody = HomeWorld()
-        count = 1
-        icon = custom
-        altitude = 0.0
-        waterAllowed = true
-	    nearIndex = 0
-        minDistance = @/MarkerDistance
-        maxDistance = @/MarkerDistance
-    }
+		targetBody = HomeWorld()
+		icon = custom
+		altitude = 0.0
+		latitude = @/Marker1Lat
+		latitude = @/Marker1Lon
+	}
+
+	WAYPOINT
+	{
+		name = Marker 2
+		parameter = Marker1Reached
+
+		targetBody = HomeWorld()
+		icon = custom
+		altitude = 0.0
+		latitude = @/Marker2Lat
+		latitude = @/Marker2Lon
+	}
+
+	WAYPOINT
+	{
+		name = Marker 3
+		parameter = Marker2Reached
+
+		targetBody = HomeWorld()
+		icon = custom
+		altitude = 0.0
+		latitude = @/Marker3Lat
+		latitude = @/Marker3Lon
+	}
 }
 
 //Contract Goals
@@ -358,16 +345,48 @@ BEHAVIOUR
 	{
 		name = VesselParameterGroup
 		type = VesselParameterGroup
-		title = fly to waypoint "Distance Marker" which is @/PrettyMarkerDistance from KSC
+		title = fly to Marker 1, 2 and 3 in sequence, then return to KSC
 
 		vessel = @/craft
 
 		PARAMETER
 		{
-			name = VisitWaypoint
+			name = Marker1Reached
 			type = VisitWaypoint
 
 			index = 1
+			horizontalDistance = 500.0
+			hideOnCompletion = true
+			showMessages = true
+
+			disableOnStateChange = true
+			hideChildren = true
+			hidden = true
+
+		}
+
+		PARAMETER
+		{
+			name = Marker2Reached
+			type = VisitWaypoint
+
+			index = 2
+			horizontalDistance = 500.0
+			hideOnCompletion = true
+			showMessages = true
+
+			disableOnStateChange = true
+			hideChildren = true
+			hidden = true
+
+		}
+
+		PARAMETER
+		{
+			name = Marker3Reached
+			type = VisitWaypoint
+
+			index = 3
 			horizontalDistance = 500.0
 			hideOnCompletion = true
 			showMessages = true
