--- a/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
+++ b/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
@@ -116,6 +116,20 @@ Localization
 		#autoLOC_KPlanes_Early_004_Mach2_completedMessage = Wow! You did it! You reached Mach 2, and came back safely!\n\nInigma passed your flight data to Gene Kerman at the Kerbal Space Program, and Gene says he's very proud of your accomplishments, and that he's very glad to have you working together.
 
 		// --------------------------------------------------------------------------------
+		#autoLOC_KPlanes_Early_005_StratosphericJet_title = Fly an jet airplane to @/PrettyAltMin@/DescAltMin
+		#autoLOC_KPlanes_Early_005_StratosphericJet_description = Our aerospace chief scientist Mach Kerman, and KSP retired test pilot Yeager Kerman now say that using rockets to go fast is sort of cheating. Try to fly at an @/PrettyAltRange and velocity of @/PrettySpeed only using jet engines in level controlled flight.
+		#autoLOC_KPlanes_Early_005_StratosphericJet_synopsis = Launch an airplane from the runway, fly at an @/PrettyAltRange, exceed @/PrettySpeed in level flight for 5 seconds, and then land back at KSC safely.
+		#autoLOC_KPlanes_Early_005_StratosphericJet_notes = This may require more advanced technology, so you may have to bug the Research and Development department.
+		#autoLOC_KPlanes_Early_005_StratosphericJet_completedMessage = Jet planes need much less fuel! This will certainly open up vacations, ahem, scientific studies on the other side of the world.
+
+		// --------------------------------------------------------------------------------
+		#autoLOC_KPlanes_Early_006_ToTheNorthPole_title = Fly to the North Pole and back.
+		#autoLOC_KPlanes_Early_006_ToTheNorthPole_description = Given we can fly such a long way, Jebediah Kerman wants to go see what is at the North Pole, and then come back again. Supposedly there's solid ice to land on, and strange creatures, fierce winds, bitter cold and a host of other things that would discourage more sensible Kerbals from going there.
+		#autoLOC_KPlanes_Early_006_ToTheNorthPole_synopsis = Follow the helpful Markers 1 through 3 in order.
+		#autoLOC_KPlanes_Early_006_ToTheNorthPole_notes = Wrapping up warm might be an idea. Carrying enough snacks and fuel is going to be tricky.
+		#autoLOC_KPlanes_Early_006_ToTheNorthPole_completedMessage = Brrrr! That was indeed very cold, but beautiful place to visit. Lets never go again.
+
+		// --------------------------------------------------------------------------------
 		#autoLOC_KPlanes_Early_007_MesosphereLow_title = Fly an airplane to @/PrettyAltMin@/DescAltMin.
 		#autoLOC_KPlanes_Early_007_MesosphereLow_description = The Kerbal Space Program have selected your organization to receive special funding to design and fly an aircraft that will reach the upper atmospheric height of @/PrettyAltRange. Inigma Kerman explains that accomplishing this feat will open up the exciting frontier of spaceplane development!
 		#autoLOC_KPlanes_Early_007_MesosphereLow_synopsis = Simply launch an airplane from the runway, fly at an @/PrettyAltRange, then land back at KSC safely.
@@ -129,6 +143,20 @@ Localization
 		#autoLOC_KPlanes_Early_008_Mach3_notes = Mach 3 is definitely not cool. IN fact, it's the threshold of the flames of fire. The aerodynamic forces attacking your plane will be relentless, and unforgiving. Send a brave pilot who you know will keep his cool in flight.
 		#autoLOC_KPlanes_Early_008_Mach3_completedMessage = Incredible! You have achieved Mach 3!\n\nInigma Kerman says this flight brings the spaceplane program one crucial step toward reality, and also comes with some significant funds from the Kerbal Space Program who will benefit from your flight data.
 
+		// --------------------------------------------------------------------------------
+		#autoLOC_KPlanes_Early_009_AroundThePoles_title = Fly to the North Pole then to the South Pole.
+		#autoLOC_KPlanes_Early_009_AroundThePoles_description = Jebediah Kerman enjoyed the North Pole so much, he thinks we should do both the North and South Pole in one trip. Madness. The engineers have no idea where to put all the fuel, let alone snacks for such a long journey. Refueling a long the way would make sense, if that is possible.
+		#autoLOC_KPlanes_Early_009_AroundThePoles_synopsis = Follow the helpful Markers 1 through 3 in order.
+		#autoLOC_KPlanes_Early_009_AroundThePoles_notes = No idea where all the fuel needed will come from.
+		#autoLOC_KPlanes_Early_009_AroundThePoles_completedMessage = Going around the world was quite boring. Possibly taking in-flight enterainment will help next time? Either that or go to sleep... so long as you remember to turn on the autopilot.
+		
+		// --------------------------------------------------------------------------------
+		#autoLOC_KPlanes_Early_010_AroundTheWorld_title = Fly around the world!
+		#autoLOC_KPlanes_Early_010_AroundTheWorld_description = Our engineers think that going around the world in an airplane will be the pinnacle of long distance travel, and will generate such amazing publicity that we will never run out of funds ever again. However Gene Kerman thinks that going all that distance just to come back again is pretty silly. Whatever pays the bills though.
+		#autoLOC_KPlanes_Early_010_AroundTheWorld_synopsis = Follow the helpful Markers 1 through 3 in order.
+		#autoLOC_KPlanes_Early_010_AroundTheWorld_notes = No idea where all the fuel needed will come from.
+		#autoLOC_KPlanes_Early_010_AroundTheWorld_completedMessage = Going around the world was quite boring. Possibly having decent in-flight catering and very comfortable beds will help next time? Either that or watch lots of movies.
+		
 		// --------------------------------------------------------------------------------
 		#autoLOC_KPlanes_Early_011_MesosphereHigh_title = Fly an airplane to @/PrettyAltMin@/DescAltMin.
 		#autoLOC_KPlanes_Early_011_MesosphereHigh_description = The Kerbal Space Program wants us to be the first to develop a spaceplane for use in its space program. Inigma Kerman already had you on speed dial, and is currently asking your organization to lead this cutting edge effort.\n\nInigma says that you will need to develop a spaceplane - one that will be able to fly to the highest reaches of the atmosphere, and land on the ground safely. It's not that hard to say that an @/PrettyAltRange is a mere skip away from space. He says the Kerbal Space Program has already given authorization to make this a suborbital flight if desired - assuming you can engineer your spaceplane to do so, but it's not required to complete the mission.
