--- a/GameData/ContractPacks/KPlanes/Groups/Early/005-StratosphericJet.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Early/005-StratosphericJet.cfg
@@ -6,7 +6,7 @@
 CONTRACT_TYPE
 {
 
-	sortKey = a008
+	sortKey = a005
 
 //REQUIREMENTS FOR CONTRACT TO APPEAR
 
@@ -15,7 +15,17 @@ CONTRACT_TYPE
 		name = CompleteContract
 		type = CompleteContract
 
-		contractType = Start-006-ShortHop
+		contractType = Early-003-StratosphereHigh
+		minCount = 1
+
+	}
+
+	REQUIREMENT
+	{
+		name = CompleteContract
+		type = CompleteContract
+
+		contractType = Early-002-Mach1
 		minCount = 1
 
 	}
@@ -28,14 +38,36 @@ CONTRACT_TYPE
 	{
 		type = string
 
-		craft = KPlanesCraft_Start_008
+		craft = KPlanesCraft_Early_005
 
 	}
 
 	DATA
 	{
 		type = double
-		AltMax = Round(@KPlanes:StratosphereLow * 1000.0)
+		AltMin = Round(@KPlanes:StratosphereLow * 1000.0)
+		ScaledAltMin = Round(@/AltMin / 1000.0)
+		title = Minimum altitude
+	}
+
+	DATA
+	{
+		type = string
+		DescAltMin = " (Stratosphere Low)"
+		title = Minimum altitude
+	}
+
+	DATA
+	{
+		type = string
+		PrettyAltMin = @/ScaledAltMin.ToString("#,# km")
+		title = Minimum altitude
+	}
+
+	DATA
+	{
+		type = double
+		AltMax = Round(@KPlanes:StratosphereHigh * 1000.0)
 		ScaledAltMax = Round(@/AltMax / 1000.0)
 		title = Maximum altitude
 	}
@@ -43,7 +75,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		DescAltMax = " (Stratosphere Low)"
+		DescAltMax = " (Stratosphere High)"
 		title = Maximum altitude
 	}
 
@@ -57,75 +89,53 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		PrettyAltRange = altitude of at most @/PrettyAltMax@/DescAltMax
+		PrettyAltRange = altitude between @/PrettyAltMin@/DescAltMin and @/PrettyAltMax@/DescAltMax
 		title = Range for altitude 
 	}
 
 	DATA
 	{
 		type = double
-		Distance = Round(@KPlanes:Domestic * 1000.0)
-		ScaledDistance = Round(@/Distance / 1000.0)
-		title = Distance
+		Speed = Round(@KPlanes:Mach1 * 1.0)
+		ScaledSpeed = Round(@/Speed / 1.0)
+		title = Speed
 	}
 
 	DATA
 	{
 		type = string
-		DescDistance = " (Domestic)"
-		title = Distance
+		DescSpeed = " (Mach1)"
+		title = Speed
 	}
 
 	DATA
 	{
 		type = string
-		PrettyDistance = @/ScaledDistance.ToString("#,# km")
-		title = Distance
+		PrettySpeed = @/ScaledSpeed.ToString("#,# m/s")
+		title = Speed
 	}
 
 	DATA
 	{
 		type = string
-		PrettyDistanceRange = distance of at least @/PrettyDistance@/DescDistance
-		title = Range for distance 
-	}
-
-	DATA
-	{
-		type = double
-		MarkerDistance = Round(@KPlanes:Domestic * 1000.0) / 2.0
-		ScaledMarkerDistance = Round(@/MarkerDistance / 1000.0)
-		title = Distance
-	}
-
-	DATA
-	{
-		type = string
-		DescMarkerDistance = ""
-		title = Distance
-	}
-
-	DATA
-	{
-		type = string
-		PrettyMarkerDistance = @/ScaledMarkerDistance.ToString("#,# km")
-		title = Distance
+		PrettySpeedRange = speed of at least @/PrettySpeed@/DescSpeed
+		title = Range for speed 
 	}
 
 //CONTRACT DESCRIPTION
 
-	name = Start-008-DomesticDistance
-	title = #autoLOC_KPlanes_Start_008_DomesticDistance_title
-	group = KPlanes_Start
-	agent = Wright Aeronautical
+	name = Early-005-StratosphericJet
+	title = #autoLOC_KPlanes_Early_005_StratosphericJet_title
+	group = KPlanes_Early
+	agent = KACA
 
-	description = #autoLOC_KPlanes_Start_008_DomesticDistance_description
+	description = #autoLOC_KPlanes_Early_005_StratosphericJet_description
 
-	synopsis = #autoLOC_KPlanes_Start_008_DomesticDistance_synopsis
+	synopsis = #autoLOC_KPlanes_Early_005_StratosphericJet_synopsis
 
-	notes = #autoLOC_KPlanes_Start_008_DomesticDistance_notes
+	notes = #autoLOC_KPlanes_Early_005_StratosphericJet_notes
 
-	completedMessage = #autoLOC_KPlanes_Start_008_DomesticDistance_completedMessage
+	completedMessage = #autoLOC_KPlanes_Early_005_StratosphericJet_completedMessage
 
 //Contract Limits
 	maxCompletions = 1
@@ -141,18 +151,18 @@ CONTRACT_TYPE
 	deadline = 0
 
 //Contract Reward Modifiers
-	prestige = Trivial
+	prestige = Significant
 	targetBody = HomeWorld()
 
 //Contract Rewards
-	advanceFunds = 10 * @KPlanes:RewardAdvanceFunds
-	rewardFunds = 10 * @KPlanes:RewardFunds
-	rewardReputation = 5 * @KPlanes:RewardReputation
-	rewardScience = 3 * @KPlanes:RewardScience
+	advanceFunds = 50 * @KPlanes:RewardAdvanceFunds
+	rewardFunds = 50 * @KPlanes:RewardFunds
+	rewardReputation = 20 * @KPlanes:RewardReputation
+	rewardScience = 12 * @KPlanes:RewardScience
 
 //Contract Penalties
-	failureFunds = 10 * @KPlanes:FailureFunds
-	failureReputation = 5 * @KPlanes:FailureReputation
+	failureFunds = 50 * @KPlanes:FailureFunds
+	failureReputation = 20 * @KPlanes:FailureReputation
 
 
 //PARAMETERS FOR CONTRACT COMPLETION
@@ -281,50 +291,13 @@ CONTRACT_TYPE
 
 	}
 
-//Contract Behaviour (Distance Marker)
-	DATA
-	{
-		type = double
-		Marker1Lat = 0.0
-		Marker1Lon = KSC().Location().Longitude() >= 90.0 ? KSC().Location().Longitude() - 90.0 : KSC().Location().Longitude() + 90.0
-		Marker2Lat = 0.0
-		Marker2Lon = KSC().Location().Longitude() >= 0.0 ? KSC().Location().Longitude() - 180.0 : KSC().Location().Longitude() + 180.0
-		Marker3Lat = 0.0
-		Marker3Lon = KSC().Location().Longitude() <= 90.0 ? KSC().Location().Longitude() + 90.0 : KSC().Location().Longitude() - 90.0
-		title = Marker Locations
-	}
-
-BEHAVIOUR
-{
-    name = WaypointGenerator
-    type = WaypointGenerator
-
-    PQS_CITY
-    {
-        name = KSC
-
-        targetBody = HomeWorld()
-        hidden = true
-        icon = ksc
-        pqsCity = KSC
-    }
-
-    RANDOM_WAYPOINT_NEAR
-    {
-        name = Distance Marker
-
-        targetBody = HomeWorld()
-        count = 1
-        icon = custom
-        altitude = 0.0
-        waterAllowed = true
-	    nearIndex = 0
-        minDistance = @/MarkerDistance
-        maxDistance = @/MarkerDistance
-    }
-}
-
 //Contract Goals
+	PARAMETER
+	{
+		name = All
+		type = All
+		title = achieve a maximum airspeed of @/PrettySpeed
+
 		PARAMETER
 		{
 			name = VesselParameterGroup
@@ -340,6 +313,7 @@ BEHAVIOUR
 	
 				targetBody = HomeWorld()
 				situation = FLYING
+				minAltitude = @/AltMin
 				maxAltitude = @/AltMax
 	
 				disableOnStateChange = false
@@ -354,34 +328,84 @@ BEHAVIOUR
 	
 		}
 	
-	PARAMETER
-	{
-		name = VesselParameterGroup
-		type = VesselParameterGroup
-		title = fly to waypoint "Distance Marker" which is @/PrettyMarkerDistance from KSC
-
-		vessel = @/craft
-
 		PARAMETER
 		{
-			name = VisitWaypoint
-			type = VisitWaypoint
-
-			index = 1
-			horizontalDistance = 500.0
-			hideOnCompletion = true
-			showMessages = true
-
-			disableOnStateChange = true
+			name = VesselParameterGroup
+			type = VesselParameterGroup
+			title = fly faster than @/PrettySpeed
+	
+			vessel = @/craft
+	
+			PARAMETER
+			{
+				name = ReachState
+				type = ReachState
+	
+				targetBody = HomeWorld()
+				situation = FLYING
+				minSpeed = @/Speed
+	
+				disableOnStateChange = false
+				hideChildren = true
+				hidden = true
+	
+			}
+	
+			completeInSequence = false
+			disableOnStateChange = false
 			hideChildren = true
-			hidden = true
-
+	
 		}
-
+	
+		PARAMETER
+		{
+			name = VesselParameterGroup
+			type = VesselParameterGroup
+			title = with less than 10 m/s of vertical speed
+	
+			vessel = @/craft
+	
+			PARAMETER
+			{
+				name = ReachState
+				type = ReachState
+	
+				targetBody = HomeWorld()
+				situation = FLYING
+				minRateOfClimb = -10
+				maxRateOfClimb = 10
+	
+				disableOnStateChange = false
+				hideChildren = true
+				hidden = true
+	
+			}
+	
+			completeInSequence = true
+			disableOnStateChange = false
+			hideChildren = true	
+	
+		}
+	
+		PARAMETER
+		{
+			name = Duration
+			type = Duration
+	
+			duration = 5s
+			preWaitText = and hold for:
+			waitingText = and hold for: 
+			completionText = You did it!
+	
+			completeInSequence = true
+			disableOnStateChange = false
+	
+		}
+	
+	
 		completeInSequence = true
 		disableOnStateChange = true
-		hideChildren = true
-
+	
 	}
 
 //Recovery Parameter - Landing
