--- a/GameData/ContractPacks/KPlanes/Groups/Early/010-AroundTheWorld.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Early/010-AroundTheWorld.cfg
@@ -279,11 +279,11 @@ CONTRACT_TYPE
 	    {
 		name = Marker 1
 
-		    targetBody = HomeWorld()
+		targetBody = HomeWorld()
 		icon = custom
 		altitude = 0.0
 		latitude = @/Marker1Lat
-		latitude = @/Marker1Lon
+		longditude = @/Marker1Lon
 	    }
 
 	    WAYPOINT
@@ -295,7 +295,7 @@ CONTRACT_TYPE
 		icon = custom
 		altitude = 0.0
 		latitude = @/Marker2Lat
-		latitude = @/Marker2Lon
+		longditude = @/Marker2Lon
 	    }
 
 	    WAYPOINT
@@ -307,7 +307,7 @@ CONTRACT_TYPE
 		icon = custom
 		altitude = 0.0
 		latitude = @/Marker3Lat
-		latitude = @/Marker3Lon
+		longditude = @/Marker3Lon
 	    }
 	}
 
