Oops, put polar et. al. markers in wrong place.

--- a/GameData/ContractPacks/KPlanes/Groups/Early/009-AroundThePoles.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Early/009-AroundThePoles.cfg
@@ -260,6 +260,18 @@ CONTRACT_TYPE
 	}
 
 //Contract Behaviour (Waypoints)
+	DATA
+	{
+		type = double
+		Marker1Lat = 90.0
+		Marker1Lon = KSC().Location().Longitude()
+		Marker2Lat = KSC().Location().Latitude()
+		Marker2Lon = KSC().Location().Longitude() >= 0.0 ? KSC().Location().Longitude() - 180.0 : KSC().Location().Longitude() + 180.0
+		Marker3Lat = -90.0
+		Marker3Lon = KSC().Location().Longitude()
+		title = Marker Locations
+	}
+
 	BEHAVIOUR
 	{
 	    name = WaypointGenerator
