--- a/GameData/ContractPacks/KPlanes/Groups/Early/006-ToTheNorthPole.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Early/006-ToTheNorthPole.cfg
@@ -260,6 +260,18 @@ CONTRACT_TYPE
 	}
 
 //Contract Behaviour (Waypoints)
+	DATA
+	{
+		type = double
+		Marker1Lat = (90.0 - KSC().Location().Latitude()) / 2.0 + KSC().Location().Latitude()
+		Marker1Lon = KSC().Location().Longitude()
+		Marker2Lat = 90.0
+		Marker2Lon = KSC().Location().Longitude()
+		Marker3Lat = @/Marker1Lat
+		Marker3Lon = @/Marker1Lon
+		title = Marker Locations
+	}
+
 	BEHAVIOUR
 	{
 	    name = WaypointGenerator
