--- a/GameData/ContractPacks/KPlanes/Groups.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups.cfg
@@ -142,5 +142,7 @@ CONTRACT_GROUP
 		Continental		= Round(@Circumference / 15000.0, 100.0)
 		Intercontinental	= Round(@Circumference / 5000.0,  250.0)
 		Polar			= Round(@Circumference / 2000.0)
+		CircumPolar		= Round(@Circumference / 1000.0)
+		CircumEquator		= Round(@Circumference / 1000.0)
 	}
 }
