--- a/GameData/ContractPacks/KPlanes/Groups/Early/009-AroundThePoles.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Early/009-AroundThePoles.cfg
@@ -295,31 +295,29 @@ CONTRACT_TYPE
 		icon = custom
 		altitude = 0.0
 		latitude = @/Marker1Lat
-		longditude = @/Marker1Lon
+		longitude = @/Marker1Lon
 	    }
 
 	    WAYPOINT
 	    {
 		name = Marker 2
-		parameter = Marker1Reached
 
 		targetBody = HomeWorld()
 		icon = custom
 		altitude = 0.0
 		latitude = @/Marker2Lat
-		longditude = @/Marker2Lon
+		longitude = @/Marker2Lon
 	    }
 
 	    WAYPOINT
 	    {
 		name = Marker 3
-		parameter = Marker2Reached
 
 		targetBody = HomeWorld()
 		icon = custom
 		altitude = 0.0
 		latitude = @/Marker3Lat
-		longditude = @/Marker3Lon
+		longitude = @/Marker3Lon
 	    }
 	}
 
