Separate North Pole markers 1 and 3.

--- a/GameData/ContractPacks/KPlanes/Groups/Early/006-ToTheNorthPole.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Early/006-ToTheNorthPole.cfg
@@ -264,11 +264,11 @@ CONTRACT_TYPE
 	{
 		type = double
 		Marker1Lat = (90.0 - KSC().Location().Latitude()) / 2.0 + KSC().Location().Latitude()
-		Marker1Lon = KSC().Location().Longitude()
+		Marker1Lon = KSC().Location().Longitude() + 1.0
 		Marker2Lat = 90.0
 		Marker2Lon = KSC().Location().Longitude()
 		Marker3Lat = @/Marker1Lat
-		Marker3Lon = @/Marker1Lon
+		Marker3Lon = @/Marker1Lon - 1.0
 		title = Marker Locations
 	}
 
