Describe waypoint marker parameters in contract for long distance.

--- a/GameData/ContractPacks/KPlanes/Groups/Early/006-ToTheNorthPole.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Early/006-ToTheNorthPole.cfg
@@ -371,7 +371,7 @@ CONTRACT_TYPE
 
 			disableOnStateChange = true
 			hideChildren = true
-			hidden = true
+			hidden = false
 
 		}
 
@@ -387,7 +387,7 @@ CONTRACT_TYPE
 
 			disableOnStateChange = true
 			hideChildren = true
-			hidden = true
+			hidden = false
 
 		}
 
@@ -403,7 +403,7 @@ CONTRACT_TYPE
 
 			disableOnStateChange = true
 			hideChildren = true
-			hidden = true
+			hidden = false
 
 		}
 
