Addd distance completion messages, make sure marker params visible.

--- a/GameData/ContractPacks/KPlanes/Groups/Early/006-ToTheNorthPole.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Early/006-ToTheNorthPole.cfg
@@ -367,6 +367,7 @@ CONTRACT_TYPE
 			index = 1
 			horizontalDistance = 500.0
 			hideOnCompletion = true
+			completedMessage = You reached the Marker 1, head to Marker 2.
 			showMessages = true
 
 			disableOnStateChange = true
@@ -383,6 +384,7 @@ CONTRACT_TYPE
 			index = 2
 			horizontalDistance = 500.0
 			hideOnCompletion = true
+			completedMessage = You reached the Marker 2, head to Marker 3.
 			showMessages = true
 
 			disableOnStateChange = true
@@ -399,6 +401,7 @@ CONTRACT_TYPE
 			index = 3
 			horizontalDistance = 500.0
 			hideOnCompletion = true
+			completedMessage = You reached the Marker 3, head back to KSC.
 			showMessages = true
 
 			disableOnStateChange = true
@@ -409,7 +412,7 @@ CONTRACT_TYPE
 
 		completeInSequence = true
 		disableOnStateChange = true
-		hideChildren = true
+		hideChildren = false
 
 	}
 
