--- a/GameData/ContractPacks/KPlanes/Groups/Start/006-ShortHop.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/006-ShortHop.cfg
@@ -368,6 +368,7 @@ CONTRACT_TYPE
 			index = 1
 			horizontalDistance = 500.0
 			hideOnCompletion = true
+			completedMessage = You reached the Distance Marker, head back to the KSC.
 			showMessages = true
 
 			disableOnStateChange = true
