Fix distances on markers, trying again. Sigh.

--- a/GameData/ContractPacks/KPlanes/Groups/Early/006-ToTheNorthPole.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Early/006-ToTheNorthPole.cfg
@@ -365,7 +365,8 @@ CONTRACT_TYPE
 			type = VisitWaypoint
 
 			index = 1
-			horizontalDistance = 500.0
+			distance = 0.0
+			horizontalDistance = 1.0
 			hideOnCompletion = true
 			completedMessage = You reached the Marker 1, head to Marker 2.
 			showMessages = true
@@ -382,7 +383,8 @@ CONTRACT_TYPE
 			type = VisitWaypoint
 
 			index = 2
-			horizontalDistance = 500.0
+			distance = 0.0
+			horizontalDistance = 1.0
 			hideOnCompletion = true
 			completedMessage = You reached the Marker 2, head to Marker 3.
 			showMessages = true
@@ -399,7 +401,8 @@ CONTRACT_TYPE
 			type = VisitWaypoint
 
 			index = 3
-			horizontalDistance = 500.0
+			distance = 0.0
+			horizontalDistance = 1.0
 			hideOnCompletion = true
 			completedMessage = You reached the Marker 3, head back to KSC.
 			showMessages = true
