--- a/GameData/ContractPacks/KPlanes/Groups/Start/006-ShortHop.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/006-ShortHop.cfg
@@ -366,7 +366,8 @@ CONTRACT_TYPE
 			type = VisitWaypoint
 
 			index = 1
-			horizontalDistance = 500.0
+			distance = 0.0
+			horizontalDistance = 1.0
 			hideOnCompletion = true
 			completedMessage = You reached the Distance Marker, head back to the KSC.
 			showMessages = true
