North Pole and similar must complete markers in sequence.

--- a/GameData/ContractPacks/KPlanes/Groups/Early/006-ToTheNorthPole.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Early/006-ToTheNorthPole.cfg
@@ -264,11 +264,11 @@ CONTRACT_TYPE
 	{
 		type = double
 		Marker1Lat = (90.0 - KSC().Location().Latitude()) / 2.0 + KSC().Location().Latitude()
-		Marker1Lon = KSC().Location().Longitude() + 1.0
+		Marker1Lon = KSC().Location().Longitude() + 2.0
 		Marker2Lat = 90.0
 		Marker2Lon = KSC().Location().Longitude()
 		Marker3Lat = @/Marker1Lat
-		Marker3Lon = @/Marker1Lon - 1.0
+		Marker3Lon = @/Marker1Lon - 2.0
 		title = Marker Locations
 	}
 
@@ -371,6 +371,7 @@ CONTRACT_TYPE
 			completedMessage = You reached the Marker 1, head to Marker 2.
 			showMessages = true
 
+			completeInSequence = true
 			disableOnStateChange = true
 			hideChildren = true
 			hidden = false
@@ -389,6 +390,7 @@ CONTRACT_TYPE
 			completedMessage = You reached the Marker 2, head to Marker 3.
 			showMessages = true
 
+			completeInSequence = true
 			disableOnStateChange = true
 			hideChildren = true
 			hidden = false
@@ -407,6 +409,7 @@ CONTRACT_TYPE
 			completedMessage = You reached the Marker 3, head back to KSC.
 			showMessages = true
 
+			completeInSequence = true
 			disableOnStateChange = true
 			hideChildren = true
 			hidden = false
