--- a/GameData/ContractPacks/KPlanes/Groups/Early/010-AroundTheWorld.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Early/010-AroundTheWorld.cfg
@@ -371,6 +371,7 @@ CONTRACT_TYPE
 			completedMessage = You reached the Marker 1, head to Marker 2.
 			showMessages = true
 
+			completeInSequence = true
 			disableOnStateChange = true
 			hideChildren = true
 			hidden = false
@@ -389,6 +390,7 @@ CONTRACT_TYPE
 			completedMessage = You reached the Marker 2, head to Marker 3.
 			showMessages = true
 
+			completeInSequence = true
 			disableOnStateChange = true
 			hideChildren = true
 			hidden = false
@@ -407,6 +409,7 @@ CONTRACT_TYPE
 			completedMessage = You reached the Marker 3, head back to KSC.
 			showMessages = true
 
+			completeInSequence = true
 			disableOnStateChange = true
 			hideChildren = true
 			hidden = false
